--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -60,7 +60,7 @@
             android:allowBackup="false"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/application_label"
-            android:theme="@style/Theme.FrostWire">
+            android:theme="@style/Theme.SnapLoad">
 
         <meta-data
                 android:name="com.google.android.gms.version"
