--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,6 @@
 import groovy.swing.SwingBuilder
 import groovy.xml.Namespace
 
-/*
- * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
- * Copyright (c) 2011-2022, FrostWire(R). All rights reserved.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      https://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
@@ -76,7 +60,7 @@ def changeApkOutput(variant) {
 //    }
     // dht.keystore - dht123456
     def suffix = project.ext.versionName + '-b' + project.ext.versionCode
-    def name = "Dht" + variant.buildType.name + '-' + suffix
+    def name = "SnapLoad" + variant.buildType.name + '-' + suffix
 
     variant.outputs.all { output ->
         outputFileName = name + '.apk'
@@ -139,30 +123,23 @@ android {
         }
     }
 
-
-    signingConfigs {
-        release {
-            if (isAssembleRelease) {
-                storeFile file("../../frostwire-tools/certs/android.keystore/frostwire.keystore")
-                def sigRequester = new SignatureRequester()
-                sigRequester.ask()
-                storePassword sigRequester.keyPassword()
-                keyAlias sigRequester.keyAlias()
-                keyPassword sigRequester.keyPassword()
-            } else {
-                storePassword ''
-                keyAlias ''
-                keyPassword ''
-            }
-        }
-    }
+//    signingConfigs {
+//        release {
+//            storeFile file("../../frostwire-tools/certs/android.keystore/frostwire.keystore")
+//            def sigRequester = new SignatureRequester()
+//            sigRequester.ask()
+//            storePassword sigRequester.keyPassword()
+//            keyAlias sigRequester.keyAlias()
+//            keyPassword sigRequester.keyPassword()
+//        }
+//    }
 
     buildTypes {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     'proguard-rules.pro'
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
             multiDexKeepFile file('multidex-config.txt')
         }
         debug {
